--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,8 @@
                         <div class="info-container bg-green-50 p-8 rounded-xl">
                              
                             <h3 class="font-bold text-xl mb-4" data-lang="info_title">Contact Information</h3>
-                            <p class="mb-2"><strong>Address:</strong> Tech Park, Bhubaneswar, Odisha, 751024</p>
-                            <p class="mb-2"><strong>Email:</strong> support@amachasi.com</p>
+                            <p class="mb-2"><strong>Address:</strong> Botanda, Bhubaneswar, Odisha, 751002</p>
+                            <p class="mb-2"><strong>Email:</strong> farmerbro@amachasi.com</p>
                             <p><strong>Phone:</strong> +91 12345 67890</p>
                         </div>
                     </div>
