--- a/report.html
+++ b/report.html
@@ -173,7 +173,7 @@
                     app_name: "AmaChasi", nav_home: "Home", nav_report: "Get Report", nav_history: "History", nav_contact: "Contact", nav_login: "Login",
                     report_title: "Generate Your Crop Report",
                     report_subtitle: "Fill in the details below to receive a personalized yield prediction and optimization plan.",
-                    form_name: "Your Name", form_number: "Registered Number", form_file_upload: "Upload Soil Report (Optional)", form_submit: "Generate Report",
+                    form_name: "Your Name", form_number: "Registered Number", form_file_upload: "Upload Soil Report", form_submit: "Generate Report",
                     dash_title: "Your Crop Yield Analysis", dash_yield: "Predicted Yield (Rice)", dash_soil: "Soil Health Score", dash_water: "Watering Needs", dash_nutrients: "Soil Nutrient Levels",
                     sugg_heading: "Optimization Tips:",
                     sugg_tip1: "Increase Nitrogen-based fertilizer by 15%.",
@@ -185,7 +185,7 @@
                     app_name: "ଆମ ଚାଷୀ", nav_home: "ମୁଖ୍ୟ ପୃଷ୍ଠା", nav_report: "ରିପୋର୍ଟ ପାଆନ୍ତୁ", nav_history: "ଇତିହାସ", nav_contact: "ଯୋଗାଯୋଗ", nav_login: "ଲଗଇନ୍",
                     report_title: "ଆପଣଙ୍କ ଫସଲ ରିପୋର୍ଟ ପ୍ରସ୍ତୁତ କରନ୍ତୁ",
                     report_subtitle: "ଏକ ବ୍ୟକ୍ତିଗତ ଅମଳ ପୂର୍ବାନୁମାନ ଏବଂ ଅପ୍ଟିମାଇଜେସନ୍ ଯୋଜନା ପାଇବାକୁ ନିମ୍ନରେ ବିବରଣୀ ପୂରଣ କରନ୍ତୁ।",
-                    form_name: "ଆପଣଙ୍କ ନାମ", form_number: "ପଞ୍ଜୀକୃତ ନମ୍ବର", form_file_upload: "ମୃତ୍ତିକା ରିପୋର୍ଟ ଅପଲୋଡ୍ କରନ୍ତୁ (ବୈକଳ୍ପିକ)", form_submit: "ରିପୋର୍ଟ ପ୍ରସ୍ତୁତ କରନ୍ତୁ",
+                    form_name: "ଆପଣଙ୍କ ନାମ", form_number: "ପଞ୍ଜୀକୃତ ନମ୍ବର", form_file_upload: "ମୃତ୍ତିକା ରିପୋର୍ଟ ଅପଲୋଡ୍ କରନ୍ତୁ", form_submit: "ରିପୋର୍ଟ ପ୍ରସ୍ତୁତ କରନ୍ତୁ",
                     dash_title: "ଆପଣଙ୍କ ଫସଲ ଅମଳ ବିଶ୍ଳେଷଣ", dash_yield: "ଅନୁମାନିତ ଅମଳ (ଧାନ)", dash_soil: "ମୃତ୍ତିକା ସ୍ୱାସ୍ଥ୍ୟ ସ୍କୋର", dash_water: "ଜଳସେଚନ ଆବଶ୍ୟକତା", dash_nutrients: "ମୃତ୍ତିକା ପୋଷକ ସ୍ତର",
                     sugg_heading: "ଅପ୍ଟିମାଇଜେସନ୍ ପରାମର୍ଶ:",
                     sugg_tip1: "ନାଇଟ୍ରୋଜେନ୍ ଆଧାରିତ ସାର ୧୫% ବଢାନ୍ତୁ।",
